# drl_to_excel

./: .gitignore  README.md  pyproject.toml
examples/: ab_variants.py  excel_to_drl.py
setup/: environment.yml
src/: __init__.py  drl_writer.py  excel_parser.py  ir.py
src/drl_to_excel/: __init__.py  drl_parser.py  drl_writer.py  excel_parser.py  excel_writer.py  generators.py
tests/: __init__.py  create_sample_excel.py  test_drl_parser.py  test_excel_parser.py  test_excel_writer.py  test_generators.py  test_ir.py
tests/fixtures/: fraud_rules.xlsx  score_rules.xlsx
