[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "drl_to_excel"
version = "0.1.0"
description = "Bidirectional converter between Excel decision tables and Drools Rule Language (DRL)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Travis Whitfield" }
]
keywords = [
    "drools",
    "decision-table",
    "drl",
    "excel",
    "rules-engine",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/traviswhitfield/drl_to_excel"
Repository = "https://github.com/traviswhitfield/drl_to_excel"

[tool.hatch.build.targets.wheel]
packages = ["src/drl_to_excel"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
